Nova tela de segmento de atuacao

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -149,6 +149,8 @@
 			// }
 			color: #999999;
 			font-weight: 600;
+			font-size: 14px;
+
 
 			&:hover {
 				background: rgba(248, 107, 25, 0.2);
