ajustes nas telas de clientes e contratos

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -12,6 +12,7 @@
 	width: $cr-sidebar-width;
 	font-weight: 200;
 	color: #fff;
+	background: white;
 	background-position: center center;
 	background-size: cover;
 	transition: left 0.1s ease-in;
