--- a/src/styles/pages/_auth.scss
+++ b/src/styles/pages/_auth.scss
@@ -4,6 +4,10 @@
     background: linear-gradient(to right, rgb(171, 186, 171), rgb(255, 255, 255));;	
     height: 100vh;
     overflow: hidden;
+    .banner{
+        width: 100%;
+        height: 100%;
+    }
     .container {
         display: flex;
         align-items: center;
